// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inverted text button renders a white colored text as default 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: color 200ms;
  transition: color 200ms;
  color: #FFFFFF;
  fill: #FFFFFF;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  color: #9CA7B4;
  fill: #9CA7B4;
}

.c0:disabled {
  color: #637689;
  fill: #637689;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;

exports[`standard text button danger renders as design system suggests 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: color 200ms;
  transition: color 200ms;
  color: #FF5E05;
  fill: #FF5E05;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  color: #BF4704;
  fill: #BF4704;
}

.c0:disabled {
  color: #C6CDD4;
  fill: #C6CDD4;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;

exports[`standard text button renders a primary colored text as default 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border-radius: 0.25rem;
  border: 0.0625rem solid transparent;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: "Open Sans",sans-serif;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1rem;
  height: 3rem;
  min-width: 6.25rem;
  padding: 0 1rem;
  -webkit-transition: color 200ms;
  transition: color 200ms;
  color: #096BDB;
  fill: #096BDB;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 svg path {
  fill: inherit;
}

.c0:hover {
  color: #0750A4;
  fill: #0750A4;
}

.c0:disabled {
  color: #C6CDD4;
  fill: #C6CDD4;
}

<button
  class="sc-AxjAm c0"
>
  Click
</button>
`;
